# optimus

./: .gitignore  README.md  exp.py  mlm.py  pyproject.toml  train_tokenizer.py
notebooks/: mlm_tokenizer.ipynb  pos_encoding.ipynb
optimus/: add_and_normalize.py  encoder_layer.py  optimus_embedding.py  positional_embedding.py  self_attention.py  self_attention_head.py  testing.py  transformer_feed_forward.py
optimus/heads/: classification_head.py  mlm_head.py
scripts/: prepare_dataset_for_mlm.py
tests/: add_and_normalize_test.py  classification_head_test.py  encoder_layer_test.py  optimus_embedding_test.py  positional_encoding_test.py  self_attn_head_test.py  self_attn_test.py  transformer_feed_forward_test.py
