[tool.poetry]
name = "optimus"
version = "0.1.0"
description = ""
authors = ["Mateusz Bednarski <mateusz.bednarski@windowslive.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
