[tool.poetry]
name = "optimus"
version = "0.1.0"
description = ""
authors = ["Mateusz Bednarski <mateusz.bednarski@windowslive.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
jupyter = "^1.0.0"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
isort = "^5.6.4"
assertpy = "^1.1"
coverage = "^5.3"
toml = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--junitxml=report.xml"
junit_family= "xunit2"
testpaths = [
    "tests"
]

[tool.coverage.run]
command_line = "-m pytest"
source = ["optimus"]